--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+
     <style>
         body {
             background-color: #f8fafc;
@@ -16,6 +19,7 @@
             display: flex;
             flex-direction: column;
         }
+
         .chat-container {
             background: white;
             border-radius: 10px;
@@ -25,54 +29,67 @@
             overflow-y: auto;
             margin-bottom: 20px;
         }
+
         .input-area {
             margin-top: 20px;
         }
+
         .chat-bubble {
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 10px;
         }
+
         .chat-bubble-primary {
             background-color: transparent;
             color: black;
         }
+
         .chat-bubble-secondary {
             background-color: transparent;
             color: black;
         }
+
         .copy-button {
             color: blue;
             text-decoration: none;
             cursor: pointer;
         }
+
         .copy-button:hover {
             text-decoration: underline;
         }
+
         .message-content p {
             margin-bottom: 0.5em;
         }
+
         .message-content ul {
             margin-left: 20px;
         }
+
         .message-role {
             font-weight: bold;
             margin-bottom: 5px;
         }
     </style>
 </head>
+
 <body>
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
         <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
+
         <div class="text-center mb-4">
             <a href="https://nevan32.github.io/chatbotforlaporanbugorsaran.github.io/" target="_blank">
                 <button class="btn bg-green-500 hover:bg-green-700 text-white">Laporkan Bug/Saran/Pertanyaan Disini</button>
             </a>
         </div>
+
         <!-- Tombol untuk memulai chat baru -->
         <div class="mb-4 text-left">
             <button @click="clearChat" class="btn bg-blue-400 hover:bg-blue-500 text-white">+Chat Baru</button>
         </div>
+
         <div class="chat-container mb-4">
             <div class="chat chat-start" v-for="(message, index) in messages" :key="index" :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary' : 'chat-bubble-secondary']">
                 <div class="flex items-center mb-2">
@@ -80,15 +97,21 @@
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                 </div>
                 <div class="message-content" v-html="formatMessageContent(message.content)"></div>
+
                 <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
             </div>
+
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
         </div>
+
         <div class="input-area">
             <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full" />
             <button @click="sendMessage" class="btn btn-primary mt-2">Kirim</button>
         </div>
     </div>
+
+    <!-- Tambahan paragraf di bawah chatbot -->
+    <p class="text-center mt-4">Dibuat oleh Raya Fadilla Azhar</p>
 
     <script type="module">
         new Vue({
@@ -106,6 +129,7 @@
                         this.inputMessage = '';
                         this.messages.push(userMessage);
                         this.saveChatHistory(); // Simpan chat setiap kali ada pesan baru
+
                         this.sendToDiscord('User', userMessage.content);
                         this.typing = true;
 
@@ -127,8 +151,6 @@
                     return message.replace(/(https?:\/\/[^\s]+)\s+/g, '$1').replace(/\s+(com|org|net|id|co)/g, '$1');
                 },
                 formatMessageContent(content) {
-                    // Mengganti **text** dengan <strong>text</strong> untuk format tebal
-                    content = content.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
                     return content.replace(/\n/g, '<br>').replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
                 },
                 copyToClipboard(content) {
@@ -180,7 +202,7 @@
             const response = await hf.chatCompletion({
                 model: "mistralai/Mixtral-8x7B-Instruct-v0.1",
                 messages: messages,
-                max_tokens: 5000,
+                max_tokens: 500,
                 temperature: 0.3,
                 seed: 0,
             });
@@ -189,4 +211,5 @@
         }
     </script>
 </body>
+
 </html>
