--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -18,6 +17,11 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
+        }
+
+        .dark-mode {
+            background-color: #121212;
+            color: #ffffff;
         }
 
         .chat-container {
@@ -75,9 +79,22 @@
     </style>
 </head>
 
-<body>
+<body :class="{ 'dark-mode': darkMode }">
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
         <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
+
+        <!-- Pilihan bahasa -->
+        <div class="text-center mb-4">
+            <select v-model="selectedLanguage" class="select select-bordered w-full">
+                <option value="en">English</option>
+                <option value="id">Bahasa Indonesia</option>
+            </select>
+        </div>
+
+        <!-- Tombol Mode Gelap -->
+        <div class="text-center mb-4">
+            <button @click="toggleDarkMode" class="btn bg-gray-500 hover:bg-gray-700 text-white">Toggle Dark Mode</button>
+        </div>
 
         <div class="text-center mb-4">
             <a href="https://nevan32.github.io/chatbotforlaporanbugorsaran.github.io/" target="_blank">
@@ -97,7 +114,6 @@
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                 </div>
                 <div class="message-content" v-html="formatMessageContent(message.content)"></div>
-
                 <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
             </div>
 
@@ -110,7 +126,6 @@
         </div>
     </div>
 
-    <!-- Tambahan paragraf di bawah chatbot -->
     <p class="text-center mt-4">Dibuat oleh Raya Fadilla Azhar</p>
 
     <script type="module">
@@ -120,7 +135,8 @@
                 inputMessage: '',
                 messages: JSON.parse(localStorage.getItem('chatHistory')) || [], // Ambil chat dari localStorage
                 typing: false,
-                firstInteraction: true,
+                darkMode: false,
+                selectedLanguage: 'en', // Default bahasa
             },
             methods: {
                 async sendMessage() {
@@ -130,14 +146,12 @@
                         this.messages.push(userMessage);
                         this.saveChatHistory(); // Simpan chat setiap kali ada pesan baru
 
-                        this.sendToDiscord('User', userMessage.content);
                         this.typing = true;
 
-                        const data = await generateText(this.messages);
+                        const data = await generateText(this.messages, this.selectedLanguage); // Pass selected language
                         this.typing = false;
                         this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
                         this.saveChatHistory(); // Simpan chat setelah balasan dari asisten
-                        this.sendToDiscord('Assistant', data);
                     }
                 },
                 clearChat() {
@@ -146,6 +160,9 @@
                 },
                 saveChatHistory() {
                     localStorage.setItem('chatHistory', JSON.stringify(this.messages));
+                },
+                toggleDarkMode() {
+                    this.darkMode = !this.darkMode;
                 },
                 cleanUpLinks(message) {
                     return message.replace(/(https?:\/\/[^\s]+)\s+/g, '$1').replace(/\s+(com|org|net|id|co)/g, '$1');
@@ -168,25 +185,6 @@
                             .catch(err => console.error('Gagal menyalin teks: ', err));
                     }
                 },
-                async sendToDiscord(role, content) {
-                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
-                    const message = {
-                        username: role,
-                        content: content,
-                    };
-                    try {
-                        await fetch(webhookURL, {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(message),
-                        });
-                        console.log('Pesan terkirim ke Discord');
-                    } catch (error) {
-                        console.error('Gagal mengirim pesan ke Discord:', error);
-                    }
-                }
             },
             mounted() {
                 if (this.messages.length === 0) {
@@ -195,7 +193,7 @@
             }
         });
 
-        async function generateText(messages) {
+        async function generateText(messages, language) {
             const { HfInference } = await import('https://esm.sh/@huggingface/inference');
             const hf = new HfInference('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');
 
@@ -205,6 +203,7 @@
                 max_tokens: 500,
                 temperature: 0.3,
                 seed: 0,
+                language: language // Gunakan bahasa yang dipilih
             });
 
             return response.choices[0].message.content;
