--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,18 +72,9 @@
         }
     </style>
 </head>
-
 <body>
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
         <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
-
-        <!-- Pilihan bahasa -->
-        <div class="text-center mb-4">
-            <select v-model="selectedLanguage" class="select select-bordered w-full">
-                <option value="en">English</option>
-                <option value="id">Bahasa Indonesia</option>
-            </select>
-        </div>
 
         <div class="text-center mb-4">
             <a href="https://nevan32.github.io/chatbotforlaporanbugorsaran.github.io/" target="_blank">
@@ -104,18 +94,23 @@
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                 </div>
                 <div class="message-content" v-html="formatMessageContent(message.content)"></div>
+
                 <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
             </div>
 
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
         </div>
 
-        <div class="input-area">
-            <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full" />
-            <button @click="sendMessage" class="btn btn-primary mt-2">Kirim</button>
+        <!-- Area input pesan -->
+        <div class="input-area flex items-center">
+            <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full mr-2" />
+            <button @click="sendMessage" class="btn p-0" style="background: none; border: none;">
+                <img src="https://icon-icons.com/icons2/2699/PNG/512/paper_airplane_icon_169387.png" alt="Send" class="w-10 h-10" />
+            </button>
         </div>
     </div>
 
+    <!-- Tambahan paragraf di bawah chatbot -->
     <p class="text-center mt-4">Dibuat oleh Raya Fadilla Azhar</p>
 
     <script type="module">
@@ -125,7 +120,7 @@
                 inputMessage: '',
                 messages: JSON.parse(localStorage.getItem('chatHistory')) || [], // Ambil chat dari localStorage
                 typing: false,
-                selectedLanguage: 'en', // Default bahasa
+                firstInteraction: true,
             },
             methods: {
                 async sendMessage() {
@@ -135,12 +130,14 @@
                         this.messages.push(userMessage);
                         this.saveChatHistory(); // Simpan chat setiap kali ada pesan baru
 
+                        this.sendToDiscord('User', userMessage.content);
                         this.typing = true;
 
-                        const data = await generateText(this.messages, this.selectedLanguage); // Pass selected language
+                        const data = await generateText(this.messages);
                         this.typing = false;
                         this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
                         this.saveChatHistory(); // Simpan chat setelah balasan dari asisten
+                        this.sendToDiscord('Assistant', data);
                     }
                 },
                 clearChat() {
@@ -171,6 +168,25 @@
                             .catch(err => console.error('Gagal menyalin teks: ', err));
                     }
                 },
+                async sendToDiscord(role, content) {
+                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
+                    const message = {
+                        username: role,
+                        content: content,
+                    };
+                    try {
+                        await fetch(webhookURL, {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify(message),
+                        });
+                        console.log('Pesan terkirim ke Discord');
+                    } catch (error) {
+                        console.error('Gagal mengirim pesan ke Discord:', error);
+                    }
+                }
             },
             mounted() {
                 if (this.messages.length === 0) {
@@ -179,14 +195,12 @@
             }
         });
 
-        async function generateText(messages, language) {
+        async function generateText(messages) {
             const { HfInference } = await import('https://esm.sh/@huggingface/inference');
             const hf = new HfInference('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');
 
-            const model = language === 'id' ? "mistralai/Mixtral-8x7B-Instruct-v0.1-id" : "mistralai/Mixtral-8x7B-Instruct-v0.1"; // Pilih model sesuai bahasa
-
             const response = await hf.chatCompletion({
-                model: model,
+                model: "mistralai/Mixtral-8x7B-Instruct-v0.1",
                 messages: messages,
                 max_tokens: 500,
                 temperature: 0.3,
@@ -197,5 +211,4 @@
         }
     </script>
 </body>
-
 </html>
