--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="input-area flex items-center">
             <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full mr-2" />
             <button @click="sendMessage" class="btn p-0" style="background: none; border: none;">
-                <img src="https://icon-icons.com/icons2/2699/PNG/512/paper_airplane_icon_169387.png" alt="Send" class="w-10 h-10" />
+                <img src="https://www.pngwing.com/id/free-png-zlzsb" alt="Send" class="w-10 h-10" />
             </button>
         </div>
     </div>
