--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,14 +48,30 @@
             color: black;
         }
 
-        .copy-button {
-            color: blue;
-            text-decoration: none;
-            cursor: pointer;
+        .code-box {
+            background-color: #1e1e1e; /* Background hitam */
+            color: #ffffff; /* Warna teks putih */
+            padding: 10px;
+            border-radius: 5px;
+            font-family: 'Courier New', monospace;
+            position: relative;
         }
 
-        .copy-button:hover {
-            text-decoration: underline;
+        .copy-code-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 3px;
+            font-size: 12px;
+        }
+
+        .copy-code-button:hover {
+            background-color: #45a049;
         }
 
         .message-content p {
@@ -84,7 +100,7 @@
 
         <!-- Tombol untuk memulai chat baru -->
         <div class="mb-4 text-left">
-            <button @click="clearChat" class="btn bg-blue-400 hover:bg-blue-500 text-white">+Chat Baru</button>
+            <button @click="clearChat" class="btn bg-blue-400 hover:bg-blue-500 text-white">Clear Chat</button>
         </div>
 
         <div class="chat-container mb-4">
@@ -93,9 +109,18 @@
                     <img :src="message.role === 'user' ? 'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png' : 'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'" alt="User or Assistant Icon" class="w-8 h-8 mr-2">
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                 </div>
-                <div class="message-content" v-html="formatMessageContent(message.content)"></div>
 
-                <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
+                <!-- Menampilkan konten pesan, jika pesan berupa kode, tampilkan dalam format hitam -->
+                <div v-if="isCodeBlock(message.content)" class="code-box">
+                    <pre>{{ message.content }}</pre>
+                    <button class="copy-code-button" @click="copyToClipboard(message.content)">Salin Kode</button>
+                </div>
+
+                <div v-else class="message-content" v-html="formatMessageContent(message.content)"></div>
+
+                <div v-if="!isCodeBlock(message.content)">
+                    <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
+                </div>
             </div>
 
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
@@ -118,7 +143,7 @@
             el: '#app',
             data: {
                 inputMessage: '',
-                messages: JSON.parse(localStorage.getItem('chatHistory')) || [], // Ambil chat dari localStorage
+                messages: JSON.parse(localStorage.getItem('chatHistory')) || [],
                 typing: false,
                 firstInteraction: true,
             },
@@ -128,21 +153,20 @@
                         const userMessage = { role: "user", content: this.cleanUpLinks(this.inputMessage) };
                         this.inputMessage = '';
                         this.messages.push(userMessage);
-                        this.saveChatHistory(); // Simpan chat setiap kali ada pesan baru
-
+                        this.saveChatHistory();
                         this.sendToDiscord('User', userMessage.content);
                         this.typing = true;
 
                         const data = await generateText(this.messages);
                         this.typing = false;
                         this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
-                        this.saveChatHistory(); // Simpan chat setelah balasan dari asisten
+                        this.saveChatHistory();
                         this.sendToDiscord('Assistant', data);
                     }
                 },
                 clearChat() {
                     this.messages = [];
-                    this.saveChatHistory(); // Hapus riwayat dari localStorage
+                    this.saveChatHistory();
                 },
                 saveChatHistory() {
                     localStorage.setItem('chatHistory', JSON.stringify(this.messages));
@@ -161,12 +185,15 @@
                         el.select();
                         document.execCommand('copy');
                         document.body.removeChild(el);
-                        alert('Pesan berhasil disalin menggunakan metode fallback!');
+                        alert('Kode berhasil disalin!');
                     } else {
                         navigator.clipboard.writeText(content)
-                            .then(() => alert('Pesan berhasil disalin!'))
-                            .catch(err => console.error('Gagal menyalin teks: ', err));
+                            .then(() => alert('Kode berhasil disalin!'))
+                            .catch(err => console.error('Gagal menyalin kode: ', err));
                     }
+                },
+                isCodeBlock(content) {
+                    return content.startsWith('```') && content.endsWith('```');
                 },
                 async sendToDiscord(role, content) {
                     const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
@@ -182,32 +209,23 @@
                             },
                             body: JSON.stringify(message),
                         });
-                        console.log('Pesan terkirim ke Discord');
                     } catch (error) {
-                        console.error('Gagal mengirim pesan ke Discord:', error);
+                        console.error('Error sending message to Discord:', error);
                     }
-                }
-            },
-            mounted() {
-                if (this.messages.length === 0) {
-                    this.firstInteraction = true;
                 }
             }
         });
 
         async function generateText(messages) {
-            const { HfInference } = await import('https://esm.sh/@huggingface/inference');
-            const hf = new HfInference('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');
-
-            const response = await hf.chatCompletion({
-                model: "mistralai/Mixtral-8x7B-Instruct-v0.1",
-                messages: messages,
-                max_tokens: 500,
-                temperature: 0.3,
-                seed: 0,
+            const response = await fetch('https://gpt-3.5-api-saygnscxla-uc.a.run.app/generate', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ messages }),
             });
-
-            return response.choices[0].message.content;
+            const data = await response.json();
+            return data.text;
         }
     </script>
 </body>
