--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Prism.js for syntax highlighting -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
 
     <style>
         body {
@@ -17,7 +21,6 @@
             display: flex;
             flex-direction: column;
         }
-
         .chat-container {
             background: white;
             border-radius: 10px;
@@ -27,64 +30,50 @@
             overflow-y: auto;
             margin-bottom: 20px;
         }
-
         .input-area {
             margin-top: 20px;
         }
-
         .chat-bubble {
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 10px;
         }
-
         .chat-bubble-primary {
             background-color: transparent;
             color: black;
         }
-
         .chat-bubble-secondary {
             background-color: transparent;
             color: black;
         }
-
-        .code-box {
-            background-color: #1e1e1e; /* Background hitam */
-            color: #ffffff; /* Warna teks putih */
-            padding: 10px;
-            border-radius: 5px;
-            font-family: 'Courier New', monospace;
-            position: relative;
-        }
-
-        .copy-code-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 5px 10px;
+        .copy-button {
+            color: blue;
+            text-decoration: none;
             cursor: pointer;
-            border-radius: 3px;
-            font-size: 12px;
         }
-
-        .copy-code-button:hover {
-            background-color: #45a049;
+        .copy-button:hover {
+            text-decoration: underline;
         }
-
         .message-content p {
             margin-bottom: 0.5em;
         }
-
         .message-content ul {
             margin-left: 20px;
         }
-
         .message-role {
             font-weight: bold;
             margin-bottom: 5px;
+        }
+        pre {
+            background: #2d2d2d;
+            color: #f8f8f2;
+            padding: 10px;
+            border-radius: 8px;
+            overflow-x: auto;
+        }
+        code {
+            font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -110,17 +99,11 @@
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                 </div>
 
-                <!-- Menampilkan konten pesan, jika pesan berupa kode, tampilkan dalam format hitam -->
-                <div v-if="isCodeBlock(message.content)" class="code-box">
-                    <pre>{{ message.content }}</pre>
-                    <button class="copy-code-button" @click="copyToClipboard(message.content)">Salin Kode</button>
-                </div>
+                <!-- Render the formatted message with syntax highlighting -->
+                <div class="message-content" v-html="formatMessageContent(message.content)"></div>
 
-                <div v-else class="message-content" v-html="formatMessageContent(message.content)"></div>
-
-                <div v-if="!isCodeBlock(message.content)">
-                    <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
-                </div>
+                <!-- Add copy button for code blocks -->
+                <button v-if="message.content.includes('```')" @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">Copy Code</button>
             </div>
 
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
@@ -143,7 +126,7 @@
             el: '#app',
             data: {
                 inputMessage: '',
-                messages: JSON.parse(localStorage.getItem('chatHistory')) || [],
+                messages: JSON.parse(localStorage.getItem('chatHistory')) || [], // Ambil chat dari localStorage
                 typing: false,
                 firstInteraction: true,
             },
@@ -153,20 +136,20 @@
                         const userMessage = { role: "user", content: this.cleanUpLinks(this.inputMessage) };
                         this.inputMessage = '';
                         this.messages.push(userMessage);
-                        this.saveChatHistory();
+                        this.saveChatHistory(); // Simpan chat setiap kali ada pesan baru
                         this.sendToDiscord('User', userMessage.content);
                         this.typing = true;
 
                         const data = await generateText(this.messages);
                         this.typing = false;
                         this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
-                        this.saveChatHistory();
+                        this.saveChatHistory(); // Simpan chat setelah balasan dari asisten
                         this.sendToDiscord('Assistant', data);
                     }
                 },
                 clearChat() {
                     this.messages = [];
-                    this.saveChatHistory();
+                    this.saveChatHistory(); // Hapus riwayat dari localStorage
                 },
                 saveChatHistory() {
                     localStorage.setItem('chatHistory', JSON.stringify(this.messages));
@@ -175,57 +158,63 @@
                     return message.replace(/(https?:\/\/[^\s]+)\s+/g, '$1').replace(/\s+(com|org|net|id|co)/g, '$1');
                 },
                 formatMessageContent(content) {
+                    // Format for code blocks and regular text
+                    if (content.includes("```")) {
+                        return content
+                            .replace(/```(\w+)?\n/g, '<pre><code class="language-$1">') // Opening code block with language
+                            .replace(/```/g, '</code></pre>'); // Closing code block
+                    }
                     return content.replace(/\n/g, '<br>').replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
                 },
                 copyToClipboard(content) {
+                    // Extract the code part if the content is a code block
+                    const code = content.replace(/```(\w+)?\n/g, '').replace(/```/g, ''); 
                     if (!navigator.clipboard) {
                         const el = document.createElement('textarea');
-                        el.value = content;
+                        el.value = code;
                         document.body.appendChild(el);
                         el.select();
                         document.execCommand('copy');
                         document.body.removeChild(el);
-                        alert('Kode berhasil disalin!');
+                        alert('Code berhasil disalin menggunakan metode fallback!');
                     } else {
-                        navigator.clipboard.writeText(content)
-                            .then(() => alert('Kode berhasil disalin!'))
-                            .catch(err => console.error('Gagal menyalin kode: ', err));
+                        navigator.clipboard.writeText(code)
+                            .then(() => alert('Code berhasil disalin!'))
+                            .catch(err => console.error('Gagal menyalin teks: ', err));
                     }
                 },
-                isCodeBlock(content) {
-                    return content.startsWith('```') && content.endsWith('```');
-                },
                 async sendToDiscord(role, content) {
-                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
-                    const message = {
-                        username: role,
-                        content: content,
+                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3E7auM1GQZX4lA5K4wfhpLm8PHgwtNEeYVBw5OL-Qp8ZZyD0DTKV8D'; // Ganti dengan URL webhook Discord Anda
+                    const payload = {
+                        content: `${role}: ${content}`
                     };
+
                     try {
                         await fetch(webhookURL, {
                             method: 'POST',
+                            body: JSON.stringify(payload),
                             headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(message),
+                                'Content-Type': 'application/json'
+                            }
                         });
                     } catch (error) {
                         console.error('Error sending message to Discord:', error);
                     }
-                }
+                },
             }
         });
 
         async function generateText(messages) {
-            const response = await fetch('https://gpt-3.5-api-saygnscxla-uc.a.run.app/generate', {
+            const response = await fetch('http://127.0.0.1:5000/generate', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json',
+                    'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ messages }),
+                body: JSON.stringify({ messages })
             });
+
             const data = await response.json();
-            return data.text;
+            return data.message; // Asumsikan respons berisi objek dengan properti message
         }
     </script>
 </body>
